GS-12210 Community conversation module realignment on school reviews page - corrected textarea width.

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -6467,6 +6467,7 @@ body.ie8 #js-esp-info-popup b.esp-popup-arrow-outline {
 #profileRecentDiscussions-parentReviews .textarea-parentReviews{
     height: 120px;
     padding: 4px;
+    width: 100%;
 }
 
 /* =12k-1.5 kindercare
